--- a/calculator/style.css
+++ b/calculator/style.css
@@ -50,7 +50,7 @@ button:hover {
     background-color: pink;
 }
 
-.operator {
+.operator, .sign {
     color: purple;
     background-color: plum;
 }
@@ -69,7 +69,7 @@ button:hover {
     color: white;
 
     height: 100%;
-    grid-row: 2/6;
+    grid-row: 4/6;
     grid-column: 4/5;
 }
 
